<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leap_motion</name>
  <version>0.0.12</version>
  <description>ROS2 driver for the Leap Motion gesture sensor</description>

  <maintainer email="manolofc@gmail.com">manuel</maintainer>
  <license>BSD</license>

  <url type="website">https://wiki.ros.org/leap_motion</url>
  <url type="repository">https://github.com/ros-drivers/leap_motion</url>
  <url type="bugtracker">https://github.com/ros-drivers/leap_motion/issues</url>
  <author email="flier@techfak.uni-bielefeld.de">Florian Lier</author>
  <author email="mas644@gmail.com">Mirza Shah</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>stereo_image_proc</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
